[package]
name = "chiavdf"
version = "1.1.13"
edition = "2021"
license = "Apache-2.0"
description = "Bindings to the chiavdf C++ library."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chiavdf"
repository = "https://github.com/Chia-Network/chiavdf"

[dependencies]
link-cplusplus = "1.0.10"

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1.54"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "1.0.0"
